// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableOfContent/> renders an empty table of content if items is undefined 1`] = `
<DocumentFragment>
  <nav
    aria-label="Text navigation"
    class="blog-toc"
  >
    <ul
      class="blog-toc-level nav"
    />
  </nav>
</DocumentFragment>
`;

exports[`<TableOfContent/> renders the table of content 1`] = `
<DocumentFragment>
  <nav
    aria-label="Text navigation"
    class="blog-toc"
  >
    <ul
      class="blog-toc-level nav"
    >
      <li
        class="blog-toc-entry toc-h2 nav-item"
      >
        <a
          class="nav-link"
        >
          My requirements
        </a>
      </li>
      <li
        class="blog-toc-entry toc-h2 nav-item"
      >
        <a
          class="nav-link"
        >
          What is Gatsby ?
        </a>
      </li>
      <ul
        class="blog-toc-level nav"
      >
        <li
          class="blog-toc-entry toc-h3 nav-item"
        >
          <a
            class="nav-link"
          >
            Why Gatsby ?
          </a>
        </li>
        <ul
          class="blog-toc-level nav"
        >
          <li
            class="blog-toc-entry toc-h4 nav-item"
          >
            <a
              class="nav-link"
            >
              Because
            </a>
          </li>
          <li
            class="blog-toc-entry toc-h4 nav-item"
          >
            <a
              class="nav-link"
            >
              I got high
            </a>
          </li>
        </ul>
      </ul>
      <li
        class="blog-toc-entry toc-h2 nav-item"
      >
        <a
          class="nav-link"
        >
          Conclusion
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
